# bacnet_plugin

./: .gitignore
lib/src/native/worker/: callbacks.dart  entry_point.dart
linux/: CMakeLists.txt
native/bacnet-stack/: BACnet-stack.doxyfile  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  SECURITY.md  build.bat  build.sh  cmake-format.yaml  comment.sh  configure  mirror.sh  release.sh  unittest.bat
native/bacnet-stack/apps/: Makefile
native/bacnet-stack/apps/abort/: Makefile  main.c
native/bacnet-stack/apps/ack-alarm/: Makefile  main.c
native/bacnet-stack/apps/add-list-element/: Makefile  main.c
native/bacnet-stack/apps/apdu/: Makefile  main.c
native/bacnet-stack/apps/blinkt/: Makefile  README.md  blinkt.c  blinkt.h  device.c  main.c
native/bacnet-stack/apps/create-object/: Makefile  main.c
native/bacnet-stack/apps/dcc/: Makefile  main.c
native/bacnet-stack/apps/delete-object/: Makefile  main.c
native/bacnet-stack/apps/epics/: Makefile  bacepics.h  main.c
native/bacnet-stack/apps/error/: Makefile  main.c
native/bacnet-stack/apps/event/: Makefile  main.c
native/bacnet-stack/apps/fuzz-afl/: Makefile  README.md  main.c
native/bacnet-stack/apps/fuzz-libfuzzer/: Makefile  README.md  main.c
native/bacnet-stack/apps/gateway/: Makefile  gateway.h  main.c
native/bacnet-stack/apps/getevent/: Makefile  main.c
native/bacnet-stack/apps/gtk-discover/: Makefile  README.md  main.c
native/bacnet-stack/apps/iam/: Makefile  main.c
native/bacnet-stack/apps/iamrouter/: Makefile  main.c
native/bacnet-stack/apps/initrouter/: Makefile  main.c
native/bacnet-stack/apps/lib/: Makefile
native/bacnet-stack/apps/mstpcap/: Makefile  main.c  mstpcap.txt
native/bacnet-stack/apps/mstpcrc/: Makefile  main.c
native/bacnet-stack/cmake/: Config.cmake.in
native/bacnet-stack/doc/: README.build  README.codeblocks  README.developer  README.doxygen  README.faq  README.msvc  README.release  README.sloc  README.todo  README.ubuntu  README.utils  README.workflow  bacnet-implementation-guidelines.md  code-standard.txt
native/bacnet-stack/license/: Apache-2.0  GPL-2.0  ISC  LGPL-2.1  readme.txt
native/bacnet-stack/src/: Makefile
native/bacnet-stack/test/: CMakeLists.txt  Makefile  README.md
native/src/: bacnet_plugin.c
(+1280 files in other folders)
